<resources>
    <string name="app_name">MySport-mobile</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="greeting">Hello,</string>
    <string name="name_example" translatable="false">John Cena</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="post_add">Post add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_by">Sort by</string>
    <string name="participants_example">Participants:\n\n\t- John Cena\n\t- Jack Daniels\n\t- Morgan Freeman\n\t- Mike Wazowski\n\t- Chuck Norris\n\t- Brad Pitt\n\t- Conchita Wurst</string>
    <string name="sport_name_example">Volleyball</string>
    <string name="sport_time_example">5:30 pm</string>
    <string name="sport_name_example1">Badminton</string>
    <string name="sport_time_example1">4:00 pm</string>
    <string name="sport_name_example2">Football</string>
    <string name="sport_time_example2">7:30 pm</string>
    <string name="sport_name_example3">Paddle</string>
    <string name="sport_time_example3">2:30 pm</string>
    <string name="sport_name_example4">Boxing</string>
    <string name="sport_time_example4">12:45 am</string>
    <string name="sport_name_example5">Yoga</string>
    <string name="sport_time_example5">10:00 am</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="messenger">Messenger</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="social">Social</string>
    <string name="rate_app">Rate App</string>
    <string name="share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="language">Language:</string>
    <string name="background_colour">Background colour:</string>
    <string name="balance_example">1d 4h 12min</string>
    <string name="balance">Last active</string>
    <string name="score">Score</string>
    <string name="score_example">239</string>
    <string name="fullname">Full name</string>
    <string name="email">Email</string>
    <string name="email_example">ktest6070@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="phone_example">+46 1234 1234 123</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="address">Address</string>
    <string name="address_example">Olastorpsvagen 23 Lgh 1108</string>
    <string name="update">Update</string>
    <string name="account_balance_icon_desc">Account balance icon</string>
    <string name="saveButton">Save</string>
    <string name="menu_item_selected_again">You\'ve already selected</string>
    <string name="message_share_example">Sharing...</string>
    <string name="add_event_button">Add sportEvent button</string>
    <string name="day_view_activity_description" translatable="false">Shows the day view in an activity</string>
    <string name="month_view_activity_description" translatable="false">Shows the month view in an activity</string>
    <string name="facebook_app_id" translatable="false">426138265341832</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb426138265341832</string>
    <string name="login_to">Login to</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_new_account">Create New Account</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="buttonSave" translatable="false">Save</string>
    <string name="display_option_nav">Display option</string>
    <string name="error_usage_incorrect_place" translatable="false">Parent activity which is MainActivity is null, you are trying to get wrong activity, this fragment is to be used only with MainActivity</string>
    <string name="example_address_home">USA, Minnesota, Gun Beach valley 420</string>
    <string name="create_activity">Create Activity</string>
    <string name="form_create" translatable="false">Create</string>
    <string name="select_date" translatable="false">Select Date</string>
    <string name="time_starts" translatable="false">Time Starts</string>
    <string name="time_ends" translatable="false">Time Ends</string>
    <string name="location" translatable="false">Location</string>
    <string name="class_cast_exception_fragment_data_send_event"><![CDATA[\" must initialize interface -> OnFragmentInteractionListener\"]]></string>
    <string name="error_no_participants">There are no participants currently yet!</string>
    <string name="joined_sport_dialog">You have joined %s</string>
    <string name="unjoined_sport_dialog" translatable="false">You have been withdrawn from %s</string>
    <string name="select_sport">Select sport</string>
    <string name="error_sport_add_form_fill_all_fields">Fill in all fields before submitting form</string>
    <string name="aboutText" translatable="false">MySport is a student project for DA224C VT21 Development towards Mobile Platforms made by the following students:<br /> Denial Alekseev <br />Kristijan Đaković <br />Petros Daniel <br />Robin Kamprad <br />Stefan Vojtek <br />For support contact: Admin@mysport.com</string>
    <string name="forum">Forum</string>
    <string name="forum_title" translatable="false">Forum</string>
    <string name="forum_text1" translatable="false"><![CDATA[Fun Day! Had a great day doing sports with you guys and girls, we should do this again some time!]]></string>
    <string name="sport_quit_notification">You have just quit %s.</string>
    <string name="sport_enroll_notification">You have just joined %s taking place on %s at %s.</string>
    <string name="press_confirm_join" translatable="false">Please press confirm button to join %s</string>
    <string name="quit_question">Are you sure you want to quit %s?</string>
    <string name="send_review">Send review</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="title">App rating</string>
    <string name="description">Please write your feedback</string>
    <string name="defaultComment">This app is pretty cool !</string>
    <string name="defaultHint">Please write your comment here...</string>
    <string name="text_actionButtonForum" translatable="false">Post to forum</string>
    <string name="fab_forum" translatable="false">Post</string>
    <string name="rate_title">Leave a feedback about </string>
    <string name="rate_content">Let us know how was your experience at </string>
    <string name="rate_content_notification">You have just rated </string>
    <string name="nc_utils_rate_dialog_title">Rate Us</string>
    <string name="nc_utils_rate_dialog_message">Enjoying this app?</string>
    <string name="nc_utils_rate_dialog_message_2">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="nc_utils_rate_dialog_message_3">Thank you for your rating. Your feedback can help us improve.</string>
    <string name="nc_utils_rate_dialog_ok">Rate now</string>
    <string name="nc_utils_rate_dialog_cancel">Later</string>
    <string name="nc_utils_rate_dialog_no">No\u002C thanks</string>
    <string name="nc_utils_rate_dialog_please_select_a_rating">No rating was selected.</string>
    <string name="nc_utils_feedback">Feedback</string>
    <string name="nc_utils_feedback_anonymously">Feedback Anonymously</string>
    <string name="nc_utils_feedback_by_email">Feedback by Email</string>
    <string name="nc_utils_feedback_confirm">Confirm</string>
    <string name="nc_utils_feedback_cancel">Cancel</string>
    <string name="nc_utils_feedback_ok">OK</string>
    <string name="nc_utils_feedback_send">Send</string>
    <string name="nc_utils_feedback_confirm_send">Confirm send?</string>
    <string name="nc_utils_feedback_loading">Loading</string>
    <string name="nc_utils_feedback_please_wait">Please wait...</string>
    <string name="nc_utils_feedback_message">Please give us your honest feedback.</string>
    <string name="nc_utils_insert_feedback">Type in your feedback</string>
    <string name="nc_utils_feedback_send_success">Thank you for your feedback.</string>
    <string name="nc_utils_feedback_invalid_feedback">Invalid feedback :(</string>
    <string name="nc_utils_feedback_input_email_address_title">Your email (Optional)</string>
    <string name="nc_utils_feedback_input_email_address_message">Let us reach out to you by filling up your email address below:</string>
    <string name="nc_utils_feedback_hint_email_address">Your email address</string>
    <string name="nc_utils_feedback_email_subject">App - Feedback</string>
    <string name="nc_utils_feedback_email_message">Hello\u002C</string>
    <string-array name="sport_list">
        <item>Badminton</item>
        <item>Football</item>
        <item>Paddle</item>
    </string-array>
    <string name="login_header">Login Here:</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_upload">Take Picture</string>
    <string name="profile_picture_prompt">Use camera to take a profile picture?</string>
    <string name="register_header">Register Here:</string>
    <string name="register_failure">Registration Failed. Username Taken.</string>
    <string name="register_success">Success! Redirecting to Login Screen...</string>
    <string name="login_failure">Login Failed. Bad Credentials. Try Again.</string>
    <string name="home_header">Home Screen</string>
    <string name="button_create_post">Create Post</string>
    <string name="button_create_reply">Reply</string>
    <string name="button_create_comment">Comment</string>
    <string name="button_submit_edit">Submit Edit</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_logout">Logout</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_edit_post">Edit Post</string>
    <string name="button_delete_post">Delete Post</string>
    <string name="button_submit_comment">Submit Comment</string>
    <string name="create_comment_header">Create Comment:</string>
    <string name="create_comment_hint">Enter Comment Here...</string>
    <string name="create_post_title"><b>Title:</b></string>
    <string name="create_post_content"><b>Content:</b></string>
    <string name="create_post_header">Create Forum Post:</string>
    <string name="create_post_success">Successfully Created Post!</string>
    <string name="button_submit_reply">Submit Reply</string>
    <string name="home_container_header">Forum Posts:</string>
    <string name="profile_pic_success">Profile Picture Successfully Changed!</string>
    <string name="home_title_header"><b>Title</b></string>
    <string name="home_author_header"><b>Author</b></string>
    <string name="delete_post_prompt">Delete this post?</string>
    <string name="delete_post_success">Successfully Deleted Post!</string>
    <string name="create_comment_success">Successfully Created Comment!</string>
    <string name="edit_post_header">Edit Forum Post:</string>
    <string name="edit_post_success">Successfully Edited Post!</string>
</resources>