<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_mail"
            android:title="@string/messenger" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login"
                    android:title="@string/login" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_person"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_reply"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate"
                android:title="@string/rate_app" />
        </menu>
    </item>

<!--    <item-->
<!--        android:id="@+id/nav_overflow_menu_item"-->
<!--        android:icon="@drawable/ic_preview"-->
<!--        android:title="@string/display_option_nav"-->
<!--        app:showAsAction="never"/>-->
</menu>