<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.settings.SettingsFragment">


    <TextView
        android:id="@+id/textViewSettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMySport"
        android:paddingStart="45dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:id="@+id/languagesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/language"
        android:textSize="18sp">

    </TextView>

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/background_colour"
        android:textSize="18sp">

    </TextView>

    <Spinner
        android:id="@+id/spinnerColour"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

    </Spinner>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMySport"
        android:text="@string/buttonSave" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="16sp"
            android:text="@string/aboutText">

    </TextView>

</LinearLayout>