<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical"
              tools:context=".fragments.ProfileFragment">

    <RelativeLayout
            android:background="@color/colorMySport"
            android:layout_height="300dp"
            android:layout_width="match_parent"
            android:padding="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
                android:contentDescription="@string/profile_picture_desc"
                android:id="@+id/profile_image"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:src="@drawable/ronaldo"/>

        <TextView
                android:fontFamily="sans-serif-medium"
                android:id="@+id/full_name"
                android:includeFontPadding="false"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:layout_width="wrap_content"
                android:text="@string/name_example"
                android:textColor="@color/whiteColor"
                android:textSize="25sp"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:layout_width="match_parent"
            android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                app:cardBackgroundColor="@color/colorMySport"
                app:cardElevation="10dp"
                android:theme="@style/Theme.MaterialComponents.Light">

            <RelativeLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:padding="5dp">

                <ImageView
                        android:contentDescription="@string/account_balance_icon_desc"
                        android:layout_centerHorizontal="true"
                        android:layout_height="30dp"
                        android:layout_width="30dp"
                        android:src="@drawable/ic_login"/>

                <TextView
                        android:fontFamily="@fonts/poppins_semibold"
                        android:id="@+id/payment_label"
                        android:includeFontPadding="false"
                        android:layout_centerInParent="true"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/balance_example"
                        android:textColor="@color/whiteColor"
                        android:textSize="20sp"/>

                <TextView
                        android:fontFamily="@fonts/poppins"
                        android:id="@+id/payment_desc"
                        android:includeFontPadding="false"
                        android:layout_below="@id/payment_label"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/balance"
                        android:textColor="@color/whiteColor"
                        android:textSize="14sp"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                app:cardBackgroundColor="@color/colorMySport"
                app:cardElevation="10dp"
                android:theme="@style/Theme.MaterialComponents.Light">

            <RelativeLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:padding="5dp">

                <ImageView
                        android:layout_centerHorizontal="true"
                        android:layout_height="30dp"
                        android:layout_width="30dp"
                        android:src="@drawable/ic_face"/>

                <TextView
                        android:fontFamily="@fonts/poppins_semibold"
                        android:id="@+id/score_label"
                        android:includeFontPadding="false"
                        android:layout_centerInParent="true"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/score_example"
                        android:textColor="@color/whiteColor"
                        android:textSize="20sp"/>

                <TextView
                        android:fontFamily="@fonts/poppins"
                        android:id="@+id/score_desc"
                        android:includeFontPadding="false"
                        android:layout_below="@id/score_label"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/score"
                        android:textColor="@color/whiteColor"
                        android:textSize="14sp"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/fullname"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_person"
                    android:drawableTint="@color/black"
                    android:editable="true"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/name_example" android:id="@+id/textEditName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/email"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawableTint="@color/black"
                    android:editable="true"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/email_example" android:id="@+id/textEditEmail" tools:ignore="Deprecated"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/phone"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawableTint="@color/black"
                    android:editable="true"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/phone_example" android:id="@+id/textEditPhone" tools:ignore="Deprecated"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/address"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_house"
                    android:drawableTint="@color/black"
                    android:editable="true"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/address_example" android:id="@+id/textEditAddress" tools:ignore="Deprecated"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:background="@color/colorMySport"
                android:fontFamily="@fonts/poppins_semibold"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/update"/>

    </LinearLayout>
</LinearLayout>