<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".forum.EditPost">

    <!-- Header -->
    <TextView
        android:id="@+id/edit_post_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_post_header"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"/>

    <!-- Button Row -->
    <LinearLayout
        android:id="@+id/edit_post_button_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:onClick="cancelEditPost"/>
        <!-- Hidden Buton for formatting -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="Test Button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_submit_edit"
            android:onClick="submitEditPost"/>
    </LinearLayout>

    <!-- Where post will be edited -->
    <LinearLayout
        android:id="@+id/edit_post_container"
        android:layout_width="match_parent"
        android:layout_below="@id/edit_post_header"
        android:layout_height="match_parent"
        android:layout_above="@id/edit_post_button_row"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/create_post_title"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_post_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_post_content"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_post_content"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:layout_height="0dp"
            android:layout_weight="10"/>
    </LinearLayout>

</RelativeLayout>
