<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="forum.CreateComment">

    <LinearLayout
        android:id="@+id/create_comment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Label for container -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/create_comment_header"/>
        <!-- Comment text box -->
        <EditText
            android:id="@+id/comment_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:hint="@string/create_comment_hint"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/button_cancel"
                    android:onClick="cancelComment"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_submit_comment"
                    android:layout_alignParentRight="true"
                    android:onClick="submitComment"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
