<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              android:orientation="vertical"
                                              tools:context=".settings.SettingActivity"
>
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMySport"
            android:layout_marginBottom="20dp"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/ic_menu">

        <TextView
                android:id="@+id/textViewSettingsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorMySport"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/settings"
                android:textColor="#FFFFFF"
                android:textSize="20sp">

        </TextView>

    </androidx.appcompat.widget.Toolbar>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/language"
            android:textSize="18sp">

    </TextView>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" android:id="@+id/spinnerLanguage">

    </Spinner>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/background_colour"
            android:textSize="18sp">

    </TextView>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" android:id="@+id/spinnerColour">

    </Spinner>
    <Button
            android:text="@string/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/saveButton"
            android:layout_gravity="center_horizontal" android:background="@color/colorMySport"
            android:backgroundTint="@color/colorMySport"/>

</androidx.appcompat.widget.LinearLayoutCompat>